content/consul/v1.8.x/content/commands/intention/match.mdx
---
layout: commands
page_title: 'Commands: Intention Match'
sidebar_title: match
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-11-04T10:42:51-06:00
last_modified: 2025-12-02T16:08:41-08:00
# END AUTO GENERATED METADATA
---

# Consul Intention Match

Command: `consul intention match`

The `intention match` command shows the list of intentions that match
a given source or destination. The list of intentions is listed in evaluation
order: the first intention that matches a request would be evaluated.

The [check](/commands/intention/check) command can be used to
check whether a connection would be authorized between any two services.

## Usage

Usage: `consul intention match [options] SRC_OR_DST`

`SRC` and `DST` can both take [several forms](/commands/intention#source-and-destination-naming).

#### API Options

@include 'http_api_options_client.mdx'

#### Enterprise Options

@include 'http_api_namespace_options.mdx'

#### Intention Match Options

- `-destination` - Match by destination.

- `-source` - Match by source.

## Examples

```shell-session
$ consul intention match -source web
web => db (deny)
web => * (allow)
```
